--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,13 @@ dependencies {
     implementation AppDependencies.recyclerView
     //Dagger 2
     api AppDependencies.daggerAndroid
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.navigation:navigation-fragment:2.0.0'
+    implementation 'androidx.navigation:navigation-ui:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
     kapt AppDependencies.daggerCompiler
     api AppDependencies.daggerAndroidSupport
     annotationProcessor AppDependencies.daggerProcessor
@@ -60,6 +67,10 @@ dependencies {
     //coroutine
     implementation AppDependencies.coroutineCore
     implementation AppDependencies.coroutineAndroid
+    //firebase
+    implementation AppDependencies.firebaseCore
+    implementation AppDependencies.firebaseAuth
+    implementation AppDependencies.playServiceAuth
     testImplementation TestDependencies.jUnit
     androidTestImplementation TestDependencies.runner
     androidTestImplementation TestDependencies.espressoCore
