--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion Versions.androidCompileSdk
     buildToolsVersion "29.0.2"
@@ -31,18 +33,18 @@ dependencies {
     implementation AppDependencies.appCompat
     implementation AppDependencies.core
     implementation AppDependencies.constraintLayout
-    //recycler-view
-    implementation AppDependencies.design
-    implementation AppDependencies.recyclerView
-    //Dagger 2
-    api AppDependencies.daggerAndroid
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation AppDependencies.material
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
+    //recycler-view
+    implementation AppDependencies.design
+    implementation AppDependencies.recyclerView
+    //Dagger 2
+    api AppDependencies.daggerAndroid
+
     kapt AppDependencies.daggerCompiler
     api AppDependencies.daggerAndroidSupport
     annotationProcessor AppDependencies.daggerProcessor
@@ -71,6 +73,8 @@ dependencies {
     implementation AppDependencies.firebaseCore
     implementation AppDependencies.firebaseAuth
     implementation AppDependencies.playServiceAuth
+    //facebook
+    implementation AppDependencies.facebookSdk
     testImplementation TestDependencies.jUnit
     androidTestImplementation TestDependencies.runner
     androidTestImplementation TestDependencies.espressoCore
