--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -34,11 +37,13 @@ dependencies {
     implementation AppDependencies.core
     implementation AppDependencies.constraintLayout
     implementation AppDependencies.material
+    kapt "android.arch.lifecycle:compiler:2.0.0"
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     //recycler-view
     implementation AppDependencies.design
     implementation AppDependencies.recyclerView
